# simpli-redact

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/simpli_redact/: __init__.py  app.py  cli.py  settings.py
tests/: test_app.py  test_ingest.py
