[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpli-redact"
version = "0.1.0"
description = "PII detection and data sanitization for AI-safe support data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "simpli-core @ git+https://github.com/simpli-support/simpli-core.git",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "litellm>=1.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
simpli-redact = "simpli_redact.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "PT", "S"]
ignore = ["S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "dotenv.*",
    "fastapi.*",
    "pydantic.*",
    "typer.*",
    "uvicorn.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["simpli_redact"]

[tool.coverage.report]
show_missing = true
fail_under = 80
